--- a/AutomationX-master/tsconfig.json
+++ b/AutomationX-master/tsconfig.json
@@ -1,12 +1,18 @@
-{
-   "type": "node",
+{   
+    "types": [ 
+        "node"
+     ],
    "request": "launch",
    "name": "Launch Program",
+   "lib": ["es6"],
    "runtimeArgs": [
        "-r",
        "ts-node/register"
    ],
    "args": [
        "${../../../../../src/libraries/libraries-gql-util/v1/util/GraphQLUtil.ts}"
-   ]
+   ],
+   "compilerOptions": {
+    "skipLibCheck": true
+    }  
 }
